--- a/music_sprider/pom.xml
+++ b/music_sprider/pom.xml
@@ -28,6 +28,13 @@
             <version>3.4.0</version>
         </dependency>
 
+        <!-- 有这个依赖，selenium才会正常运行 -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -39,6 +46,12 @@
             <groupId>javacsv</groupId>
             <artifactId>javacsv</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
         </dependency>
 
     </dependencies>
